--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Ubuntu', sans-serif;
     width: 100%;
     height: 100%;
+    background-repeat: no-repeat;
     align-items: center;
     
 }
